--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "clsx": "^2.1.1",
     "crypto": "^1.0.1",
     "embla-carousel-react": "^8.1.7",
+    "firebase": "^10.12.4",
     "lucide-react": "^0.412.0",
     "next": "14.2.5",
     "next-auth": "^5.0.0-beta.19",
