--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@prisma/client": "^5.17.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
@@ -31,6 +32,7 @@
     "embla-carousel-react": "^8.1.7",
     "firebase": "^10.12.4",
     "lucide-react": "^0.412.0",
+    "markdown-it": "^14.1.0",
     "next": "14.2.5",
     "next-auth": "^5.0.0-beta.19",
     "next-themes": "^0.3.0",
@@ -39,6 +41,8 @@
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
+    "react-markdown": "^9.0.1",
+    "react-markdown-editor-lite": "^1.3.4",
     "recharts": "^2.12.7",
     "resend": "^3.5.0",
     "tailwind-merge": "^2.4.0",
@@ -46,7 +50,9 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.13",
     "@types/bcryptjs": "^2.4.6",
+    "@types/markdown-it": "^14.1.1",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.15",
     "@types/react": "^18",
